cursor changes activated. Allowed moves for selected cell are highlited dynamicly

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,3 +252,10 @@ body {
     font-size: 1.5rem;
   }
 }
+
+.allowed-move::after {
+  content: "👣";
+  position: relative;
+  left: calc(var(--cell-size) * 0.4);
+  top: calc(var(--cell-size) * 0.35);
+}
