little missprints fixed in GameController.js. allowedAttacks/allowedMoves highlight CSS code changed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,13 +256,13 @@ body {
 .allowed-move::after {
   content: "👣";
   position: relative;
-  left: calc(var(--cell-size) * 0.4);
-  top: calc(var(--cell-size) * 0.35);
+  left: 0;
+  top: 0;
 }
 
 .allowed-attack::after {
   content: "⚔";
   position: relative;
-  left: calc(var(--cell-size) * 0.4);
-  top: calc(var(--cell-size) * 0.35);
+  left: 0;
+  top: 16px;
 }
